<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.projetofinal.actvities.MainActivity"
    android:orientation="vertical"
    android:background="#FFDD16">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"/>


    <Button
        android:id="@+id/btn_aluno"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/aluno"
        android:backgroundTint="#0288e7"/>


    <Button
        android:id="@+id/btn_disciplinas"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/disciplinas"
        android:backgroundTint="#0288e7"/>


    <Button
        android:id="@+id/btn_eventos"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/atividades_extras"
        android:backgroundTint="#0288e7"/>


    <Button
        android:id="@+id/btn_sair"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/sair"
        android:backgroundTint="#0288e7"/>



</LinearLayout>
