<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.projetofinal.actvities.LoginActivity"
    android:orientation="vertical"
    android:background="#FFDD16">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:contentDescription="@string/logo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:counterEnabled="true"
        app:counterMaxLength="45">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_email"
            android:hint="@string/e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="45"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_senha"
            android:hint="@string/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLength="20"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_entrar"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:backgroundTint="#0288e7"/>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:textColor="#0288e7"
        android:clickable="true"
        android:onClick="cadastroClick"
        android:focusable="true" />



</LinearLayout>
