<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.projetofinal.CadastroDisciplinaActivity"
    android:orientation="vertical"
    android:background="#FFDD16">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_disciplina"
            android:hint="@string/nome_da_disciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLength="30"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="12">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_apelido"
            android:hint="@string/apelido_da_disciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLength="12"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_nome_professor"
            android:hint="@string/nome_do_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLength="30"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_media_pessoal"
            android:hint="@string/m_dia_pessoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_gravity="bottom|end"
        android:onClick="salvarDisciplina"/>

</LinearLayout>
